syntax = "proto3";

package Hi3Helper.EncTool.Proto.StarRail;

message StarRailDispatch {
    repeated RegionInfo region_list = 4;
}

message RegionInfo {
    string name         = 1;
    string title        = 2;
    string dispatch_url = 3;
    string env_type     = 4;
    string display_name = 5;
    string msg          = 6;
}